--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- For internet permission -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".base.App"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -13,9 +17,8 @@
         android:theme="@style/Theme.Foodies"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".base.MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.Foodies">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
